# my-openenv

./: .dockerignore  LICENSE  README.md  __init__.py  _verify.py  client.py  inference.py  inference_local.py  models.py  pyproject.toml
baseline/: run_baseline.py
server/: Dockerfile  __init__.py  app.py  email_generator.py  email_triage_env.py  requirements.txt  tasks.py
